frontend/test/should_pass/basic_006.grg
rule r {
	pattern {
		negative {
		}
	}
	replace {
	}
}

