frontend/test/should_fail/inh_attrib_014.grg
using inh_attrib_model_014;

rule r {

	replace {
	}
}

